--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,7 @@ RewriteEngine on
 ErrorDocument 404 http://localhost/php/Dev-Folio/404
 
 RewriteRule ^404$ 404.php [NC,L]
+RewriteRule ^anasayfa$ test.php [NC,L]
 RewriteRule ^$ test.php [NC,L]
 RewriteRule ^iletisim$ test.php?sayfa=iletisim [NC,L]
 RewriteRule ^hakkinda$ test.php?sayfa=hakkinda [NC,L]
